// Vitest Snapshot v1

exports[`Badge > Badge buttonVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-ccee9194=""
>
  <div
    class="badge-demo"
    data-v-ccee9194=""
  >
    <div
      class="badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge"
        data-v-ccee9194=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
        >
          
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          data-v-ccee9194=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
    <div
      class="badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge"
        data-v-ccee9194=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          16
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          data-v-ccee9194=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
    <div
      class="badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge"
        data-v-ccee9194=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          NEW
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          data-v-ccee9194=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
    <div
      class="badge-item"
      data-v-ccee9194=""
    >
      <div
        class="t-badge"
        data-v-ccee9194=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          ···
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          data-v-ccee9194=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-05bee8a6=""
>
  <h1
    class="title"
    data-v-05bee8a6=""
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
    data-v-05bee8a6=""
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 普通徽标
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-39516a6b=""
    >
      <div
        class="badge-demo"
        data-v-39516a6b=""
      >
        <div
          class="badge-item"
          data-v-39516a6b=""
        >
          <div
            class="t-badge"
            data-v-39516a6b=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
            >
              
            </div>
            
            消息
            
          </div>
        </div>
        <div
          class="badge-item"
          data-v-39516a6b=""
        >
          <div
            class="t-badge"
            data-v-39516a6b=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            >
              16
            </div>
            
            消息
            
          </div>
        </div>
        <div
          class="badge-item"
          data-v-39516a6b=""
        >
          <div
            class="t-badge"
            data-v-39516a6b=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            >
              NEW
            </div>
            
            消息
            
          </div>
        </div>
        <div
          class="badge-item"
          data-v-39516a6b=""
        >
          <div
            class="t-badge"
            data-v-39516a6b=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            >
              ···
            </div>
            
            消息
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 按钮徽标
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-ccee9194=""
    >
      <div
        class="badge-demo"
        data-v-ccee9194=""
      >
        <div
          class="badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge"
            data-v-ccee9194=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
            >
              
            </div>
            
            <button
              aria-disabled="false"
              class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
              data-v-ccee9194=""
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                
                小按钮
                
              </span>
            </button>
            
          </div>
        </div>
        <div
          class="badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge"
            data-v-ccee9194=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            >
              16
            </div>
            
            <button
              aria-disabled="false"
              class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
              data-v-ccee9194=""
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                
                小按钮
                
              </span>
            </button>
            
          </div>
        </div>
        <div
          class="badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge"
            data-v-ccee9194=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            >
              NEW
            </div>
            
            <button
              aria-disabled="false"
              class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
              data-v-ccee9194=""
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                
                小按钮
                
              </span>
            </button>
            
          </div>
        </div>
        <div
          class="badge-item"
          data-v-ccee9194=""
        >
          <div
            class="t-badge"
            data-v-ccee9194=""
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            >
              ···
            </div>
            
            <button
              aria-disabled="false"
              class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
              data-v-ccee9194=""
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                
                小按钮
                
              </span>
            </button>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 单行徽标
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      style="padding-top: 10px;"
    >
      <div
        class="t-cell-group"
        style="overflow: hidden;"
      >
        <!--v-if-->
        <div
          class="t-cell-group__container"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--dot"
                >
                  
                </div>
                <!---->
              </div>
              
            </div>
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--circle"
                >
                  16
                </div>
                <!---->
              </div>
              
            </div>
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--round"
                >
                  NEW
                </div>
                <!---->
              </div>
              <div
                class="t-badge"
                style="margin-left: 8px;"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--circle"
                >
                  NEW
                </div>
                <!---->
              </div>
              
            </div>
            <div
              class="t-cell__right-icon"
            >
              <svg
                class="t-icon t-icon-chevron-right"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge t-badge__ribbon--outer"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--ribbon"
                >
                  NEW
                </div>
                <!---->
              </div>
              
            </div>
            <!--v-if-->
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Badge > Badge normalVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-39516a6b=""
>
  <div
    class="badge-demo"
    data-v-39516a6b=""
  >
    <div
      class="badge-item"
      data-v-39516a6b=""
    >
      <div
        class="t-badge"
        data-v-39516a6b=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
        >
          
        </div>
        
        消息
        
      </div>
    </div>
    <div
      class="badge-item"
      data-v-39516a6b=""
    >
      <div
        class="t-badge"
        data-v-39516a6b=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          16
        </div>
        
        消息
        
      </div>
    </div>
    <div
      class="badge-item"
      data-v-39516a6b=""
    >
      <div
        class="t-badge"
        data-v-39516a6b=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          NEW
        </div>
        
        消息
        
      </div>
    </div>
    <div
      class="badge-item"
      data-v-39516a6b=""
    >
      <div
        class="t-badge"
        data-v-39516a6b=""
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          ···
        </div>
        
        消息
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge singleLineVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  style="padding-top: 10px;"
>
  <div
    class="t-cell-group"
    style="overflow: hidden;"
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          单行标题
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-badge"
          >
            <div
              class="t-badge__inner t-badge--medium t-badge--dot"
            >
              
            </div>
            <!---->
          </div>
          
        </div>
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          单行标题
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-badge"
          >
            <div
              class="t-badge__inner t-badge--medium t-badge--circle"
            >
              16
            </div>
            <!---->
          </div>
          
        </div>
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          单行标题
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-badge"
          >
            <div
              class="t-badge__inner t-badge--medium t-badge--round"
            >
              NEW
            </div>
            <!---->
          </div>
          <div
            class="t-badge"
            style="margin-left: 8px;"
          >
            <div
              class="t-badge__inner t-badge--medium t-badge--circle"
            >
              NEW
            </div>
            <!---->
          </div>
          
        </div>
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          单行标题
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-badge t-badge__ribbon--outer"
          >
            <div
              class="t-badge__inner t-badge--medium t-badge--ribbon"
            >
              NEW
            </div>
            <!---->
          </div>
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
  </div>
</div>
`;
